Part 4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: widgetario-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: widgetario.local
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: api.widgetario.local
      http:
        paths:
          - path: /products()(.*)
            pathType: Prefix
            backend:
              service:
                name: products-api
                port:
                  number: 80
